MarcoKitTests/TestData/error/object1.marco
--before
{

--after
0-1: '}' expected
